# GCRS

./: conversation_parser.py  data_generation.py  demo.py  graph_reasoner.py  integrations.py  knowledge_graph.py  main.py  prompt_builder.py  pyproject.toml  recommender.py  triplets_list.txt
