[project]
name = "g-crs-poc-mod"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "faiss-cpu>=1.11.0.post1",
    "graphistry>=0.41.0",
    "networkx>=3.5",
    "numpy>=2.3.2",
    "openai>=1.99.6",
    "pandas>=2.3.1",
    "rapidfuzz>=3.13.0",
    "sentence-transformers>=5.1.0",
]
